Test add-on with Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ install:
   - cp testee.py blender-2.75-linux-glibc211-x86_64/2.75/scripts/addons/testee.py
 
 # テスト実行
-script: blender-2.75-linux-glibc211-x86_64/blender --background --addons testee --python test.py
+script: blender-2.75-linux-glibc211-x86_64/blender -noaudio --factory-startup --background --addons testee --python test.py
