--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ install:
   # ★アドオンをインストール（Blenderのバージョンに合わせて、ディレクトリを指定）
   - cp testee.py blender-2.75-linux-glibc211-x86_64/2.75/scripts/addons/testee.py
 
-# テスト実行
+# ★テスト実行
 script: blender-2.75-linux-glibc211-x86_64/blender -noaudio --factory-startup --background --addons testee --python test.py
